--- a/calculator.qsf
+++ b/calculator.qsf
@@ -47,3 +47,17 @@ set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
+set_global_assignment -name VHDL_FILE add.vhd
+set_global_assignment -name VHDL_FILE sub.vhd
+set_global_assignment -name VHDL_FILE muti.vhd
+set_global_assignment -name VHDL_FILE main.vhd
+set_global_assignment -name VHDL_FILE div.vhd
+set_global_assignment -name VHDL_FILE BCD_to_7_segmen.vhd
+set_global_assignment -name VHDL_FILE result_to_BCD.vhd
+set_global_assignment -name VHDL_FILE top_level.vhd
+set_global_assignment -name VHDL_FILE mux_to_box.vhd
+set_global_assignment -name VHDL_FILE mux_to_mux.vhd
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
